# EOS-Transfer-Proxy-Dapp

./: .gitignore  CMakeLists.txt  README.md  transfer_proxy.cpp  utils.hpp
scripts/: add_transfer_proxy.sh
src/: transfer_proxy.cpp  utils.hpp
src/test/: CMakeLists.txt  proxy_test.cpp
test/: proxy_test.cpp
